--- a/packages/social-media-app/frontend/src/index.css
+++ b/packages/social-media-app/frontend/src/index.css
@@ -29,6 +29,8 @@ code {
 @tailwind utilities;
 @tailwind variants;
 
+
+/* 
 .customLook {
     --tag-bg: #0052BF;
     --tag-hover: #CE0078;
@@ -50,7 +52,6 @@ code {
     margin-top: 0;
 }
 
-/* Do not show the "remove tag" (x) button when only a single tag remains */
 .customLook .tagify__tag:only-of-type .tagify__tag__removeBtn {
     display: none;
 }
@@ -91,7 +92,7 @@ code {
 .customLook .tagify__input {
     display: none;
 }
-
+ */
 
 
 .content-container {
@@ -102,9 +103,16 @@ code {
     --tag-bg: transparent;
     --tag-border-radius: 0.75rem;
     --tag-hover: theme('colors.primary.200');
-    border-radius:  0.75rem;
-/*     --tags-border-color: transparent; */
+    --tags-focus-border-color: theme('colors.primary.400');
+    border-radius: 0.75rem;
+    /*     --tags-border-color: transparent; */
 }
+
+/* .tagify__tag-text, .tagify__input {
+	white-space: nowrap !important;
+} */
+
+
 /* .tagify__input
 {
     @apply before:opacity-100 !important
@@ -114,10 +122,17 @@ code {
     @apply border-neutral-500 border-solid border-[1px] rounded-xl
 }
 
+.react-grid-placeholder {
+    @apply bg-secondary-400 !important
+}
+
 .btn {
     @apply font-bold py-2 px-4 rounded;
 }
 
+.btn:hover {
+    @apply bg-primary-200
+}
 
 
 .btn-icon {
@@ -125,25 +140,43 @@ code {
 }
 
 .btn-icon:hover {
-    @apply  bg-primary-200
-}
-
-.btn-icon:focus {
-    @apply bg-primary-400
+    @apply bg-primary-200
 }
 
 
-.btn-icon-sx > * {
+.btn-icon-sx>* {
     @apply w-4 h-4
 }
 
-.btn-icon-md > * {
-    @apply w-6 h-6
-}
-.btn-icon-lg > * {
+.btn-icon-md>* {
     @apply w-6 h-6
 }
 
-.btn-icon-lg > * {
+.btn-icon-lg>* {
+    @apply w-6 h-6
+}
+
+.btn-icon-lg>* {
     @apply w-8 h-8
+}
+
+
+.btn-toggle {
+    outline: none;
+    border: none;
+
+}
+
+.btn-toggle[data-state='on'] {
+    background-color: theme('colors.primary.400');
+}
+
+.btn-toggle:focus {
+    box-shadow: 0 0 0 2px black;
+    outline: none;
+    box-shadow: none;
+}
+
+.pending {
+    border: 5px theme('colors.primary.400') solid;
 }
