--- a/packages/live-streaming/frontend/src/media/controls/Controls.css
+++ b/packages/live-streaming/frontend/src/media/controls/Controls.css
@@ -1,12 +1,15 @@
 .video-wrapper {
     width: 100%;
+    max-width: 100vw;
     position: relative;
     display: flex;
     justify-content: center;
     overflow-y: auto;
     flex-direction: column;
-    max-height: 100vh;
+    max-height: 100dvh;
+    align-items: center;
 }
+
 
 /* .video-wrapper:hover .controls {
     transform: translateY(0%);
