--- a/packages/live-streaming/frontend/src/media/controls/Controls.css
+++ b/packages/live-streaming/frontend/src/media/controls/Controls.css
@@ -3,7 +3,6 @@
     max-width: 100vw;
     position: relative;
     display: flex;
-    justify-content: center;
     overflow-y: auto;
     flex-direction: column;
     max-height: 100dvh;
@@ -19,7 +18,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    position: absolute;
+    /* position: absolute; */
 
     /*  position: absolute;
     width: 100vw;
@@ -28,7 +27,7 @@
 
     position: -webkit-sticky;
     position: sticky;
-    margin-top: -42px;
+    /* margin-top: -42px; */
     bottom: 0px;
 
 
