--- a/packages/live-streaming/frontend/src/media/viewer/ClickOnceForAudio.css
+++ b/packages/live-streaming/frontend/src/media/viewer/ClickOnceForAudio.css
@@ -2,6 +2,8 @@
     position: relative;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .video-prompt {
