--- a/packages/live-streaming/frontend/src/media/controls/Controls.css
+++ b/packages/live-streaming/frontend/src/media/controls/Controls.css
@@ -1,9 +1,51 @@
+.SliderRoot {
+    position: relative;
+    display: flex;
+    align-items: center;
+    user-select: none;
+    touch-action: none;
+    width: 200px;
+    height: 20px;
+}
+
+.SliderTrack {
+    background-color: red;
+    position: relative;
+    flex-grow: 1;
+    border-radius: 9999px;
+    height: 3px;
+}
+
+.SliderRange {
+    position: absolute;
+    background-color: white;
+    border-radius: 9999px;
+    height: 100%;
+}
+
+.SliderThumb {
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    box-shadow: 0 2px 10px gray;
+    border-radius: 10px;
+}
+
+.SliderThumb:hover {
+    background-color: violet;
+}
+
+.SliderThumb:focus {
+    outline: none;
+    box-shadow: 0 0 0 5px gainsboro;
+}
+
 .video-wrapper {
     width: 100%;
     max-width: 100vw;
     position: relative;
     display: flex;
-    justify-content: center;
     overflow-y: auto;
     flex-direction: column;
     max-height: 100dvh;
@@ -19,7 +61,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    position: absolute;
+    /* position: absolute; */
 
     /*  position: absolute;
     width: 100vw;
@@ -28,7 +70,7 @@
 
     position: -webkit-sticky;
     position: sticky;
-    margin-top: -42px;
+    /* margin-top: -42px; */
     bottom: 0px;
 
 
