--- a/packages/live-streaming/frontend/src/index.css
+++ b/packages/live-streaming/frontend/src/index.css
@@ -142,6 +142,18 @@ code {
         pointer-events: none;
     }
 
+    .center-middle {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        position: absolute;
+        pointer-events: none;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        bottom: 0;
+    }
+
 
     .slider-root {
         position: relative;
