--- a/packages/social-media-app/frontend/src/index.css
+++ b/packages/social-media-app/frontend/src/index.css
@@ -1,5 +1,3 @@
-@import "@yaireo/tagify/dist/tagify.css";
-
 body {
     margin: 0;
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -123,6 +121,12 @@ code {
         /* Set the thickness */
         margin: 2rem 0;
         /* Vertical spacing to separate sections */
+    }
+
+    hr.faded {
+        border: 0;
+        height: 1px;
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
     }
 
 
@@ -271,44 +275,7 @@ code {
 }
 
 
-.tagify {
-    /*    flex-wrap: nowrap;
-    overflow: auto; */
-    border-radius: 1rem;
-    display: flex;
-    align-items: center;
-
-    --tag-bg: transparent;
-    --tag-border-radius: 0.75rem;
-    --tag-hover: theme('colors.primary.200');
-    --tags-focus-border-color: theme('colors.primary.400');
-    --placeholder-color: theme('colors.neutral.400');
-    /*     --tags-border-color: transparent; */
-}
-
-/* .tags-input > * 
-{
-    width: calc(100vw - 150px);
-} */
-.tagify__tag {
-    @apply border-neutral-200 dark:border-neutral-400 border-solid border-[2px] rounded-xl;
-}
-
-.tagify__tag__removeBtn {
-    @apply dark:text-white
-}
-
 
 .react-grid-placeholder {
     @apply bg-secondary-400 !important
 }
-
-.tagify__tag-text, .tagify__input {
-    white-space: nowrap !important;
-}
-
-
-/* .tagify__input
-{
-    @apply before:opacity-100 !important
-} */
