--- a/packages/social-media-app/frontend/src/index.css
+++ b/packages/social-media-app/frontend/src/index.css
@@ -130,6 +130,15 @@ code {
     }
 
 
+    /* scrollbar color */
+    ::-webkit-scrollbar {
+        background: var(--mono-shade3)
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: #888;
+    }
+
 
 
 }
