--- a/packages/social-media-app/frontend/src/index.css
+++ b/packages/social-media-app/frontend/src/index.css
@@ -1,3 +1,8 @@
+html,
+body {
+    height: 100%;
+}
+
 body {
     margin: 0;
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,7 +14,7 @@ body {
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
 }
 
@@ -23,15 +28,10 @@ code {
     pointer-events: none !important;
 }
 
-
-
-
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
-
 
 /*
 @layer base {
@@ -40,15 +40,14 @@ code {
         /
         dark: text-white;
         @apply bg-netrual-50,
-        bg-neutral-950; 
+        bg-neutral-950;
 
     }
 
- 
+
 }*/
 
 @layer base {
-
     input {
         @apply text-black;
         @apply dark:text-white;
@@ -126,27 +125,27 @@ code {
     hr.faded {
         border: 0;
         height: 1px;
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+        background-image: linear-gradient(
+            to right,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 0.75),
+            rgba(0, 0, 0, 0)
+        );
     }
-
 
     /* scrollbar color */
     ::-webkit-scrollbar {
-        background: var(--mono-shade3)
+        background: var(--mono-shade3);
     }
 
     ::-webkit-scrollbar-thumb {
         background: #888;
     }
-
-
-
 }
-
 
 @layer components {
     .comic-font {
-        font-family: 'Comic Neue', cursive;
+        font-family: "Comic Neue", cursive;
     }
 
     .icon {
@@ -166,7 +165,6 @@ code {
     .btn:hover {
         @apply bg-primary-200;
         @apply dark:bg-primary-400;
-
     }
 
     .btn:active {
@@ -177,13 +175,11 @@ code {
     .btn-icon:hover {
         @apply bg-primary-200;
         @apply dark:bg-primary-400;
-
     }
 
     .btn-icon:active {
         @apply bg-primary-400 !important;
         @apply dark:bg-primary-600 !important;
-
     }
 
     .btn-icon {
@@ -196,16 +192,14 @@ code {
         @apply border-[1px] border-neutral-600 dark:border-neutral-400 border-solid;
     }
 
-    .btn-toggle[data-state='on'] {
+    .btn-toggle[data-state="on"] {
         @apply bg-primary-400;
         @apply dark:bg-primary-600;
         box-shadow: 0 1px #666 !important;
         transform: translateY(4px) !important;
     }
 
-
     .btn-toggle:focus {
-
         /*  box-shadow: 0 0 0 2px black; */
         outline: none;
     }
@@ -221,22 +215,21 @@ code {
         transform: translateY(4px) !important;
     }
 
-    .btn-icon-sx>* {
-        @apply w-4 h-4
+    .btn-icon-sx > * {
+        @apply w-4 h-4;
     }
 
-    .btn-icon-md>* {
-        @apply w-6 h-6
+    .btn-icon-md > * {
+        @apply w-6 h-6;
     }
 
-    .btn-icon-lg>* {
-        @apply w-6 h-6
+    .btn-icon-lg > * {
+        @apply w-6 h-6;
     }
 
-    .btn-icon-lg>* {
-        @apply w-8 h-8
+    .btn-icon-lg > * {
+        @apply w-8 h-8;
     }
-
 
     .content-container {
         height: calc(100vh - 60px);
@@ -251,7 +244,6 @@ code {
         @apply hover:bg-primary-200;
         @apply dark:hover:bg-primary-400;
         cursor: pointer;
-
     }
 
     .menu-item:hover {
@@ -278,13 +270,8 @@ code {
     .outline-auto {
         outline: auto;
     }
-
-
-
 }
 
-
-
 .react-grid-placeholder {
-    @apply bg-secondary-400 !important
+    @apply bg-secondary-400 !important;
 }
